# complex-networks-financial-rmt

./: .gitignore  01_RMT_and_Disparity_Math.ipynb  LICENSE  README.md  REPORT.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
benchmarks/: performance_comparison.py
results/: robustness_metrics.json
scripts/: compute_matrices.py  extract_backbone.py  fetch_data.py  generate_report.py  rmt_analysis.py  robustness_analysis.py
src/: data_loader.py  main.py  rmt.py
src/finnet_backbone/: backbone.py  backbone_vectorized.py  markov_analysis.py  visualization.py
tests/: test_backbone.py  test_data_loader.py  test_rmt.py
