[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finnet-backbone"
version = "0.1.0"
authors = [
  { name="Mohammad Sameer", email="mohammadsameer737@gmail.com" },
]
description = "Financial Network Backbone Extraction using Random Matrix Theory and Disparity Filter"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["network-science", "financial-networks", "random-matrix-theory", 
            "disparity-filter", "backbone-extraction", "complex-networks"]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "matplotlib>=3.7.0", "seaborn>=0.12.0"]

[project.urls]
"Homepage" = "https://github.com/mohammadsameer737/complex-networks-financial-rmt"
"Bug Tracker" = "https://github.com/mohammadsameer737/complex-networks-financial-rmt/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["finnet_backbone*"]